<resources>
    <string name="app_name">MakeMeUp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="passwordError">Hasło musi zawierać od 8 do 16 znaków</string>
    <string name="loginError">Login musi zawierać od 6 do 16 znaków.</string>
    <string name="loginFailed">Błąd logowania, sprawdź poprawność danych logowania.</string>
    <string name="authorizing">Trwa autoryzacja</string>
    <string name="signUpFailed">Niepowodzenie rejestracji. Sprawdź poprawność danych.</string>
    <string name="signingUp">Trwa zakładanie konta</string>
    <string name="peselError">Pesel musi zawierać 11 cyfr</string>
    <string name="rePasswordError">Hasła muszą być identyczne.</string>
    <string name="nameError">Imię i Nazwisko muszą zaczynać się wielką literą, zawierać od 2 do 16 liter.</string>
    <string name="countryError">Niepoprawny format państwa </string>
    <string name="postCodeError">Niepoprawny format kodu pocztowego</string>
    <string name="phoneError">Niepoprawny format numeru telefonu</string>
    <string name="emailError">Niepoprawny format email</string>
    <string name="loginRequestError">Problem z autoryzacją. Sprawdź połączenie sieciowe.</string>
    <string name="ERROR">ERROR</string>
    <string name="fields_user">user</string>
    <string name="bundle_fields_user">user</string>
    <string name="status_code_success">200</string>
    <string name="status_code_signup_login_duplicate">Taki login już istnieje w systemie. Wybierz inny.</string>
    <string name="status_code_signup_pesel_duplicate">Ten pesel jest w naszej bazie. Zaloguj się na istniejące konto.</string>
    <string name="status_code_signup_email_duplicate">Ten email jest już w naszej bazie. Zaloguj się na istniejące konto.</string>
    <string name="cityError">Miasto musi zaczynać się wielką literą i mieć od od 2 do 32 znaków.</string>
    <string name="streetError">Ulica musi zaczynać się wielką literą i mieć od 2 do 32 znaków.</string>
    <string name="addressDetailsError">Numer domu nie może być pusty.</string>
    <string name="signupSuccess">Zaloguj się do swojego nowo utworzonego konta.</string>
    <string name="splashScreen">SplashScreen</string>
    <string name="products">Produkty</string>
    <string name="favorite_products">Ulubione</string>
    <string name="order_history">Historia zamówień</string>
    <string name="my_account">Moje konto</string>
    <string name="logout">Wyloguj</string>
    <string name="fields_user_login">login</string>
    <string name="text_link_signup_have_account">Masz już konto? Zaloguj się</string>
    <string name="sign_up_signup">Utwórz konto</string>
    <string name="repeatPassword">Powtórz hasło</string>
    <string name="password">Hasło</string>
    <string name="addressDetails">Numer domu</string>
    <string name="street">Ulica</string>
    <string name="city">Miejscowość</string>
    <string name="postCode">Kod pocztowy</string>
    <string name="country">Kraj</string>
    <string name="phoneNumber">Numer telefonu</string>
    <string name="email">Email</string>
    <string name="surname">Nazwisko</string>
    <string name="name">Imię</string>
    <string name="login">Login</string>
    <string name="pesel">Pesel</string>
    <string name="changeCredentials">Zmień dane</string>
    <string name="changePassword">Zmień hasło</string>
    <string name="deleteAccount">Usuń konto</string>
    <string name="login_login">Zaloguj się</string>
    <string name="text_link_link_dont_have_account">Nie masz konta? Zarejestruj się</string>
    <string name="save">Zapisz</string>
    <string name="text_hint_default">Wciśnij wstecz by wrócić do menu</string>
    <string name="text_hint_change_credentials_insert_password">Wprowadź bieżące hasło i zapisz by zatwierdzić zmianę danych osobowych.</string>
    <string name="text_hint_change_password">Wprowadź dwukrotnie nowe hasło i kliknij zapisz by zatwierdzić.</string>
    <string name="text_hint_delete_acccount">Kliknij zapisz by na stałe usunąć konto z portalu.</string>
    <string name="status_code_update_email_duplicate">Niepowodzenie aktualizacji danych - ten email jest już w bazie danych.</string>
    <string name="update_client_data_failed">Niepowodzenie - sprawdź poprawność danych oraz połączenie sieciowe.</string>
    <string name="status_code_update_incorrect_password">Niepowodzenie - wprowadzone hasło jest niepoprawne.</string>
    <string name="update_success">Pomyślnie zaktualizowano dane.</string>
    <string name="newPassword">newValue</string>
    <string name="newValue">newValue</string>
    <string name="change_password_failed">Niepowodzenie zmiany hasła - wprawdź dane i połączenie sieciowe.</string>
    <string name="status_code_change_incorrect_old_password">Wprowadzone pierwotne hasło jest nieprawidłowe!</string>
    <string name="insert_new_password">Nowe hasło</string>
    <string name="text_hint_default_tip">Ponowne wciśnięcie przycisku spowoduje wykonanie akcji. Wciśnij wstecz by zarzucić zmiany i wrócić do menu.</string>
    <string name="changePassword_success">Pomyślnie zmieniono hasło.</string>
    <string name="deleteAccount_success">Pomyślnie usunięto konto użytkownika.</string>
    <string name="delete_account_failed">Niepowodzenie usuwania konta. Sprawdź dane osobowe oraz połączenie sieciowe.</string>
    <string name="repeatPasswordOrInserNew">Nowe hasło/Powtórz hasło</string>
    <string name="back">Wróć</string>
    <string name="no_products">Brak produktów</string>
    <string name="filter_products">Filtruj produkty</string>
    <string name="productAllRequestError">Niepowodzenie pobierania produktów. Sprawdź połączenie sieciowe.</string>
    <string name="insert_filter_criteria">Wprowadź kryteria filtorowania a następnie zatwierdź przyciskiem filtruj.</string>
    <string name="text_hint_filter_default_tip">Zbyt szczegółowe kryteria lub nieprawidłowe dane mogą spowodować, że twoje dane nie zostaną wyświetlone.</string>
    <string name="filtering">Filtrowanie</string>
    <string name="filter">Filtruj produkty</string>
    <string name="filter_phrase">Szukana fraza</string>
    <string name="filter_price_min">Minimalna cena</string>
    <string name="filter_price_max">Maksymalna cena</string>
    <string name="filter_category_brushes">Pędzle</string>
    <string name="filter_category_furniture">Wyposażenie</string>
    <string name="filter_category_accessories">Akcesoria</string>
    <string name="text_price">Cena</string>
    <string name="text_category">Kategoria</string>
    <string name="text_name">Nazwa</string>
    <string name="text_brand">Marka</string>
    <string name="productNameBrandError">Wpisz frazę od długości od 2 do 20 znaków luz zostaw pole puste.</string>
    <string name="productPriceErrorFilter">Wpisz kwotę całkowitą (bez groszy) lub pozostaw pole puste.</string>
    <string name="productCatFilterError">Wybierz przynajmniej jedną kategorię produktów.</string>
    <string name="filterError">Niepowodzenie filtracji. Sprawdź połączenie sieciowe i poprawność wprawadzonych danych.</string>
    <string name="filterSuccess">Wyświetlone produkty odpowiadają wprowadzonemu kryterium. Aby stworzyć nowy filter ponownie klinij filtruj.</string>
    <string name="cart">Koszyk</string>
    <string name="favError">Nieoczekiwany błąd, sprawdź połączenie sieciowe.</string>
    <string name="show_fav">Pokaż twoje ulubione produkty</string>
    <string name="addToBasket">Dodaj do koszyka</string>
    <string name="desc_list_item_icon">Ikona produktu</string>
    <string name="added_to_cart">Produkt został dodany do koszyka: </string>
    <string name="number_of_products">Liczba produktów:</string>
    <string name="orderTheProducts">Zrealizuj zamówienie</string>
    <string name="emptycart">pusty koszyk</string>
    <string name="orderRequestError">Niepowodzenie, sprawdź połączenie sieciowe.</string>
    <string name="cannotOrderEmptyCard">Nie można zamówić, brak produktów w koszyku.</string>
    <string name="orderProcessed">Sprawdzanie dostępności wybranych produktów</string>
    <string name="addItemToCart">Dodaj do koszyka</string>
    <string name="orderProcessedComplete">Gratulację, wkrótce nasz kurier się z Tobą skontaktuje.</string>
    <string name="deletedCartItem">Produkt został usunięty z koszyka.</string>
    <string name="order">Zamów</string>
    <string name="instruction_manual_text_im">Każdy użytkownik rejestrując się w serwisie akceptuje ogólne założenia aplikacji. \n
        Sklep nie ponosi odpowiedzialności za brak rozwagi podczas realizowania zakupów i nie realizuje zwrotów.\n
        Administrator sklepu ma prawo odmówić realizacji zamówienia przez użytkownika. \n
        Wysyłka realizowana jest wyłącznie przez kuriera, opłacana za pobraniem. \n
        Administrator ma prawo do przeglądu danych klienta i skontaktowania się z nim drogą elektroniczną lub za pośrednictwem telefonu. \n\n
        Aby zrealizować zamówienie w sklepie internetowym zarejestruj się podając swoje dokładne dane, dodaj produkty do koszyka a następnie kliknij zamów. \n
        W ciagu 1 dnia roboczego, administator skontaktuje się z zamawiającym drogą elektroniczną w celu uzgodnienia daty przyjazdu kuriera.\n
        Po zakończeniu realizacji zamówienia status zamówienia zostanie zmieniony. \n
        Zwroty nie są realizowane, ale w razie wątpliwości, użytkownik powinien skontaktować się z panelem administracyjnym o następującym adresie elektronicznym:\n
        appmakemeup@gmail.com.
    </string>
    <string name="link_instruction_manual_l">Regulamin użytkownika</string>
</resources>
