<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView android:src="@drawable/logo_white"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/imageView"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/textview_insert_filter_criteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="4dp"
            android:fontFamily="cursive"
            android:text="@string/filtering"
            android:textAlignment="center"
            android:textColor="@color/primary_darker"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView3"
            android:fontFamily="cursive"
            android:textColor="@color/primary_darker"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_filter_phrase_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_darkest_white_skin"
                android:inputType="textPersonName"
                android:hint="@string/filter_phrase" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:fontFamily="cursive"
            android:textColor="@color/primary_darker"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_brand" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_filter_brand_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_darkest_white_skin"
                android:inputType="textPersonName"
                android:hint="@string/filter_phrase" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView1"
            android:fontFamily="cursive"
            android:textColor="@color/primary_darker"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_price" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp">
            <EditText android:id="@+id/input_filter_price_min_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_darkest_white_skin"
                android:inputType="numberDecimal"
                android:hint="@string/filter_price_min" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_filter_price_max_f"
                android:layout_width="match_parent"
                android:textColor="@color/primary_darkest_white_skin"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:hint="@string/filter_price_max" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:fontFamily="cursive"
            android:textColor="@color/primary_darker"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_category" />

        <CheckBox
            android:id="@+id/input_filter_category_brushes_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_darkest_white_skin"
            android:text="@string/filter_category_brushes" />

        <CheckBox
            android:id="@+id/input_filter_category_furniture_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_darkest_white_skin"
            android:text="@string/filter_category_furniture" />

        <CheckBox
            android:id="@+id/input_filter_category_accessories_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_darkest_white_skin"
            android:text="@string/filter_category_accessories" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_filter_f"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primary_white_skin"
            android:textColor="@color/primary_darker"
            android:text="@string/filter"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_back_f"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primary_white_skin"
            android:textColor="@color/primary_darker"
            android:text="@string/back"/>

        <TextView android:id="@+id/textview_hint_u"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@color/iron"
            android:text="@string/text_hint_filter_default_tip"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>