<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:context="com.thesis.visageapp.activities.ProductListActivity"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_back_l"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primary_white_skin"
            android:textColor="@color/primary_darker"
            android:text="@string/back"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_filter_l"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primary_white_skin"
            android:textColor="@color/primary_darker"
            android:text="@string/filter_products"/>

        <TextView
            android:id="@+id/text_empty_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/no_products" />

        <ListView
            android:id="@+id/products_list"
            android:layout_width="match_parent"
            android:layout_height="484dp" />
    </LinearLayout>


